# TBMMapMerging

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
launch/: conj_and_disj.launch  load_state.launch  map_translation.launch  parts_of_map.launch  viny_load_state.launch  viny_pr2_run.launch
rviz/: debug.rviz
src/: conj_and_disj.cpp  load_map_ff.cpp  load_state.cpp  map_translation.cpp  test.cpp  tmp.cpp
src/core/: serialization.h
src/core/maps/: grid_map.h  grid_map_scan_adders.h  plain_grid_map.h  transferable_belief_model.h
src/core/states/: laser_scan_grid_world.h  single_state_hypothesis_laser_scan_grid_world.h
src/map_merging/: TBM_map_merge.hpp  map_merging.cpp
src/map_utils/: 3_maps.cpp  comparator.cpp  compareParametres.h  compute_descriptors.h  conj_and_disj.cpp  descriptorsComarator.h  for_lib.cpp  load_state.cpp  map_rotation.cpp  map_translation.cpp  merge_maps.cpp  orbDescriptorscomparator.h  parts_of_map.cpp
src/map_utils_headers/: compareParametres.h  compute_descriptors.h  descriptorsComarator.h  orbDescriptorscomparator.h
src/ros/: occupancy_grid_publisher.h
src/slams/viny/: viny_grid_cell.h
src/test_alg/: Cluster.hpp  icp.h  test_algorythm.cpp
